src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__alias_chain_with_lots_of_initializers.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@x0 = global i32 1
@x1 = global i32 1
@x2 = global i32 2
@x3 = global i32 3

