src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__incomplete_array_initialization_with_custom_init_value.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
assertion_line: 119
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@arr = global [6 x i16] [i16 0, i16 1, i16 2, i16 7, i16 7, i16 7]

