src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__initial_values_in_array_variable_using_multiplied_statement.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@a = global [4 x i8] c"\07\07\07\07"
@b = global [4 x i8] c"\02\07\07\03"
@c = global [10 x i8] c"\00\01\00\01\00\01\00\01\00\01"
@d = global [10 x i8] c"\00\00\01\01\02\00\00\01\01\02"

