src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__initial_values_in_multi_dimension_array_variable.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@a = global [2 x [2 x i8]] c"\01\02\03\04"

