src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__initial_values_in_single_dimension_array_type.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

@x = global [3 x i16] [i16 1, i16 2, i16 3]
@__MyArray__init = unnamed_addr constant [3 x i16] [i16 1, i16 2, i16 3]

