src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__initial_values_in_single_dimension_array_variable.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@a = global [3 x i8] c"\01\02\03"
@b = global [3 x i16] [i16 1, i16 2, i16 3]
@c = global [3 x i32] [i32 1, i32 2, i32 3]
@d = global [3 x i64] [i64 1, i64 2, i64 3]
@e = global [3 x i8] c"\01\02\03"
@f = global [3 x i16] [i16 1, i16 2, i16 3]
@g = global [3 x i64] [i64 1, i64 2, i64 3]
@h = global [3 x i8] c"\01\00\01"
