src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__initial_values_in_sub_range_type.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"

@x = global i16 7, section "var-$RUSTY$x:i16"
; ModuleID = '__init___testproject'
source_filename = "__init___testproject"

define void @__init___testproject() section "fn-$RUSTY$__init___testproject:v" {
entry:
  ret void
}
