src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__initial_values_in_type_alias.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@x = global i16 7

