src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__partly_uninitialized_const_struct_will_not_report_errors.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: diagnostics
---

